--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -2,6 +2,6 @@
 
 
 <!-- You can set your favicon here -->
-link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.png' | https://scholar.google.com/citations?user=s4mUv1AAAAAJ }}"
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.png' | https://scholar.google.com/citations?user=s4mUv1AAAAAJ }}">
 
 <!-- end custom head snippets -->
