working on sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        {{ content1 }}
+        content2
+  
       </header>
       <section>
 
       {{ content }}
-      adfasdfasdf
 
       </section>
       <footer>
