working on sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,28 +40,20 @@
         {% endif %}
 
         {% if site.social_links %}
-          <ul class="social-links">
+          <div class="social-links-text">
             {% if site.social_links.github %}
-              <li><a href="https://github.com/{{ site.social_links.github }}" target="_blank" aria-label="GitHub">
-                <i class="fab fa-github"></i>
-              </a></li>
+              <p><a href="https://github.com/{{ site.social_links.github }}" target="_blank">GitHub</a></p>
             {% endif %}
             {% if site.social_links.linkedin %}
-              <li><a href="https://linkedin.com/in/{{ site.social_links.linkedin }}" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin"></i>
-              </a></li>
+              <p><a href="https://linkedin.com/in/{{ site.social_links.linkedin }}" target="_blank">LinkedIn</a></p>
             {% endif %}
             {% if site.social_links.scholar %}
-              <li><a href="{{ site.social_links.scholar }}" target="_blank" aria-label="Google Scholar">
-                <i class="fas fa-graduation-cap"></i>
-              </a></li>
+              <p><a href="{{ site.social_links.scholar }}" target="_blank">Google Scholar</a></p>
             {% endif %}
             {% if site.social_links.orcid %}
-              <li><a href="{{ site.social_links.orcid }}" target="_blank" aria-label="ORCID">
-                <i class="fab fa-orcid"></i>
-              </a></li>
+              <p><a href="{{ site.social_links.orcid }}" target="_blank">ORCID</a></p>
             {% endif %}
-          </ul>
+          </div>
         {% endif %}
   
       </header>
