--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,17 @@
             {% endif %}
           </div>
         {% endif %}
-  
+
+        {% if site.navigation %}
+          <nav>
+            <ul class="nav-links">
+              {% for item in site.navigation %}
+                <li><a href="{{ item.link | relative_url }}">{{ item.name }}</a></li>
+              {% endfor %}
+            </ul>
+          </nav>
+        {% endif %}
+          
       </header>
       <section>
 
