--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -2,6 +2,6 @@
 
 
 <!-- You can set your favicon here -->
-<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.png' | https://scholar.google.com/citations?user=s4mUv1AAAAAJ }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-papE2o0sDc4n6xN0f9B6wLUMTZv1lZpqN4z3RmYV3N7u5f7l6d0M0zKpRVnG0C0BTV1m5LyyM2K8KUqOdH+DOg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- end custom head snippets -->
