--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-papE2o0sDc4n6xN0f9B6wLUMTZv1lZpqN4z3RmYV3N7u5f7l6d0M0zKpRVnG0C0BTV1m5LyyM2K8KUqOdH+DOg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% include head-custom.html %}
   </head>
   <body>
@@ -40,29 +41,30 @@
         {% endif %}
 
         {% if site.social_links %}
-          <div class="social-links" style="display:flex; gap:1.5em; align-items:center; margin:1em 0;">
+          <div class="social-links" style="display:flex; gap:1.5em; align-items:center; margin:1em 0; font-size:0.9em;">
             {% if site.social_links.github %}
               <a href="https://github.com/{{ site.social_links.github }}" target="_blank" style="display:flex; align-items:center; text-decoration:none; color:inherit;">
-                <i class="fab fa-github" style="margin-right:0.3em;"></i> GitHub
+                <i class="fab fa-github" style="margin-right:0.3em; font-size:1.1em;"></i> GitHub
               </a>
             {% endif %}
             {% if site.social_links.linkedin %}
               <a href="https://linkedin.com/in/{{ site.social_links.linkedin }}" target="_blank" style="display:flex; align-items:center; text-decoration:none; color:inherit;">
-                <i class="fab fa-linkedin" style="margin-right:0.3em;"></i> LinkedIn
+                <i class="fab fa-linkedin" style="margin-right:0.3em; font-size:1.1em;"></i> LinkedIn
               </a>
             {% endif %}
             {% if site.social_links.scholar %}
               <a href="{{ site.social_links.scholar }}" target="_blank" style="display:flex; align-items:center; text-decoration:none; color:inherit;">
-                <i class="fas fa-graduation-cap" style="margin-right:0.3em;"></i> Google Scholar
+                <i class="fas fa-graduation-cap" style="margin-right:0.3em; font-size:1.1em;"></i> Google Scholar
               </a>
             {% endif %}
             {% if site.social_links.orcid %}
               <a href="{{ site.social_links.orcid }}" target="_blank" style="display:flex; align-items:center; text-decoration:none; color:inherit;">
-                <i class="fab fa-orcid" style="margin-right:0.3em;"></i> ORCID
+                <i class="fab fa-orcid" style="margin-right:0.3em; font-size:1.1em;"></i> ORCID
               </a>
             {% endif %}
           </div>
         {% endif %}
+
 
         {% if site.navigation %}
           <nav>
