--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,11 +71,10 @@
         {% endif %}
 
         {% if site.navigation %}
-          <nav>
-            <ul class="nav-links">
-              {% for item in site.navigation %}
-                <li><a href="{{ item.link | relative_url }}">{{ item.name }}</a></li>
-              {% endfor %}
+          <nav class="nav-tree">
+            <ul>
+              {% assign nav_items = site.navigation %}
+              {% include nav-tree-items.html items=nav_items %}
             </ul>
           </nav>
         {% endif %}
