creating research links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,10 +74,8 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li>
-              <div class="nav-parent">
-                <a href="/research">Research</a>
-                <button class="toggle" onclick="toggleSubnav(event)">▾</button>
-              </div>
+              <a href="/research">Research</a>
+              <a href="#" class="has-children" onclick="toggleSubnav(event)">▾</a>
               <ul class="subnav">
                 <li><a href="/research/pulmonary">Pulmonary</a></li>
                 <li><a href="/research/aorta">Aorta</a></li>
