editing main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
           </div>
         {% endif %}
 
-        <nav class="nav-tree">
+        <nav class="nav-tree" style="text-align: center;">>
           <ul>
             <li>
               <div class="nav-parent">
@@ -98,6 +98,7 @@
             </li>
           </ul>
         </nav>
+        <br>
 
         <script>
         function toggleSubnav(event) {
@@ -151,7 +152,7 @@
           border: none;
           background: none;
           cursor: pointer;
-          font-size: 1.0em;
+          font-size: 2.0em;
           line-height: 1;
         }
 
@@ -159,7 +160,7 @@
           display: none;
           margin-left: 1em;
           border-left: 1px solid #ccc;
-          padding-left: 0.75em;
+          padding-left: 0.0em;
         }
 
         .nav-tree .subnav.expanded {
