editing main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
           </div>
         {% endif %}
 
-        <nav class="nav-tree" style="text-align: center;">>
+        <nav class="nav-tree">
           <ul>
             <li>
               <div class="nav-parent">
@@ -144,6 +144,7 @@
           display: flex;
           align-items: center;
           gap: 0.1em;
+          font-size: 1.4em;
         }
 
         .nav-tree .toggle,
@@ -152,15 +153,15 @@
           border: none;
           background: none;
           cursor: pointer;
-          font-size: 2.0em;
+          font-size: 1.4em;
           line-height: 1;
         }
 
         .nav-tree .subnav {
           display: none;
-          margin-left: 1em;
+          margin-left: 0.0em;
           border-left: 1px solid #ccc;
-          padding-left: 0.0em;
+          padding-left: 0.75em;
         }
 
         .nav-tree .subnav.expanded {
