--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,13 +149,13 @@
 
         .nav-tree .toggle,
         .nav-tree .toggle-top {
+          display: flex;
           text-decoration: none;
           border: none;
           background: none;
           cursor: pointer;
           font-size: 1.2em;
           line-height: 1;
-          outline: none;     /* remove focus outline */
         }
 
         .nav-tree .subnav {
@@ -168,7 +168,7 @@
         .nav-tree .subnav.expanded {
           display: block;
         }
-
+        
         </style>
                           
       </header>
