--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,6 +125,7 @@
             const topNav = document.getElementById('top-nav');
             topNav.classList.add('expanded');
             document.querySelector('.toggle-top').textContent = 'Website Contents ▴';
+            toggle.blur();
           }
         });
         </script>
@@ -149,7 +150,6 @@
 
         .nav-tree .toggle,
         .nav-tree .toggle-top {
-          display: flex;
           text-decoration: none;
           border: none;
           background: none;
@@ -159,6 +159,7 @@
         }
 
         .nav-tree .subnav {
+          font-size: 2.1em; /* adjust as desired */
           display: none;
           margin-left: 0.0em;
           border-left: 1px solid #ccc;
@@ -168,7 +169,7 @@
         .nav-tree .subnav.expanded {
           display: block;
         }
-        
+
         </style>
                           
       </header>
