--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -169,6 +169,15 @@
           display: block;
         }
 
+        /* Prevent bold on focus/active */
+        .nav-tree .toggle:focus,
+        .nav-tree .toggle-top:focus,
+        .nav-tree .toggle:active,
+        .nav-tree .toggle-top:active {
+          outline: none;
+          font-weight: normal;
+        }
+
         </style>
                           
       </header>
