editing main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -169,8 +169,8 @@
         }
 
         /* Prevent bold on focus/active */
-        .nav-tree .toggle:active,
-        .nav-tree .toggle-top:active {
+        .nav-tree .toggle:focus,
+        .nav-tree .toggle-top:focus {
           outline: none;
           font-weight: normal;
         }
