--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -154,7 +154,15 @@
           border: none;
           background: none;
           cursor: pointer;
+          font-size: 1.2em;
           line-height: 1;
+        }
+
+        /* Child links font size increase */
+        .nav-tree .subnav a {
+          font-size: 1.1em; /* adjust as desired */
+          text-decoration: none;
+          color: inherit;
         }
 
         .nav-tree .subnav {
