editing main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -175,7 +175,16 @@
         .nav-tree .subnav.expanded {
           display: block;
         }
-        
+
+        /* Prevent bold on focus/active */
+        .nav-tree .toggle:focus,
+        .nav-tree .toggle-top:focus,
+        .nav-tree .toggle:active,
+        .nav-tree .toggle-top:active {
+          outline: none;
+          font-weight: normal;
+        }
+
         </style>
                           
       </header>
