--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,10 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% if page.url == "/" or page.url == "/index.html" %}
+          {% if site.logo %}
+            <img src="{{ site.logo | relative_url }}" alt="Logo" />
+          {% endif %}
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
