--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,4 +1,4 @@
-{% assign pub = site.data.publications | where: "id", include.id | first %}
+{% assign pub = site.assets.data.publications | where: "id", include.id | first %}
 {% if pub %}
 <div class="publication-entry">
   <strong>{{ pub.title }}</strong><br>
