editing research pages

--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -4,6 +4,6 @@
   <strong>{{ pub.title }}</strong><br>
   {{ pub.authors }} ({{ pub.year }})<br>
   <em>{{ pub.journal }}</em><br>
-  <a href="{{ pub.link }}">Link</a><br>
+  <a href="{{ pub.link }}">Link</a>
 </div>
 {% endif %}
